--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
